<resources>
    <string name="app_name">Mixture Of Styles</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna</string>
    <string name="title_activity_dashbord">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_saved">Saved</string>
    <string name="title_showcase">Showcase</string>
    <string name="title_list">List</string>
    <string name="title_workshop">Workshop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="terms_condition">Terms Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="unique_features">Our most frequent user will be given to showcase &amp; teach your choreography and much more hampers.</string>
</resources>