<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="liftup.tech.mixtureofstyles.Activity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_saved"
        android:name="liftup.tech.mixtureofstyles.Activity.ui.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_showcase"
        android:name="liftup.tech.mixtureofstyles.Activity.ui.showcase.ShowcaseFragment"
        android:label="@string/title_showcase"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_list"
        android:name="liftup.tech.mixtureofstyles.Activity.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_workshop"
        android:name="liftup.tech.mixtureofstyles.Activity.ui.workshop.WorkshopFragment"
        android:label="@string/title_workshop"
        tools:layout="@layout/fragment_notifications" />
</navigation>